crates/ui/src/snapshots/cctop_ui__snapshot__context_120x40.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models    █████████ claude-opus-4-1 68% claude-sonnet-4-5 32%│
│Today             $8.97                               ⡀  Sessions  4 · 2 live · 3 in 24h                              │
│This month        $0.00                               ⡀  Agent CPU   3.2%                    ⡀                        │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB · 2.5M in / 72.3K out                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   LAST▲    DUR         $   CTX%  CPU% MODEL          HARNESS    PERM   ! HOST       PROFILE   BRANCH       PROJECT   │
│●    now     1h    $18.42    90%  12.5 opus-4-1       ─          ─        local                ─            Fix the c…│
│●     7m     2h     $2.87    29%   0.4 sonnet-4-5     ─          ─        local                ─            api       │
│○     3h     1h     $0.19      ─     ─ haiku-4-5      ─          ─        local                ─            docs      │
│○     2d    12h     $7.03      ─     ─ gpt-5-codex    ─          ─        local                ─            infra     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Info  Performance  Processes  Tool Activity  Subagents  Cost  Config  Context  Preview  ─────────────────────────────╮
│Window  151.0K of 200.0K   90% to compaction   16.0K left                                                             ┃
│                                                                                                                      ┃
│██████████████████████████████████████████████████████████████████████████████████████████████████████████████████████┃
│████████████████████████████████████████████████████████████░░░░░░░░░░░░░░░░░░░·······································┃
│                                                                                                                      ┃
│█ Tool output     71.0K  36%   █ Startup         24.0K  12%                                                           │
│█ Assistant text  19.0K  10%   █ Tool input      12.0K   6%                                                           │
│█ Your messages    6.0K   3%   █ Attachments      4.0K   2%                                                           │
│█ Unaccounted     15.0K   8%   ░ Free            49.0K  25%                                                           │
│                                                                                                                      │
│Measured: Window, and Startup — the first request (system prompt, tool schemas, CLAUDE.md, skills index), which the   │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────────────────────────────────────────────── + account ╮
│Claude checking…                                            Codex checking…                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help t New tab Tab Panel S Sort q Quit                ⧉ share
