crates/ui/src/snapshots/cctop_ui__snapshot__dashboard_rename_80x24.snap
---
source: crates/ui/src/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessio╭ Move the dashboard ──────────────────────────────────────────╮───────╮
│   LAST│ Now at cctop.example.com                                     │ECT    │
│●    no│ Links to cctop.example.com stop working;                     │the ch…┃
│●     7│ the page moves to home.example.com. Its token stays the same.│       │
╰───────│                                                              │───────╯
╭ Info  │ > home█.example.com                                          │Context╮
│Root /u│                                                              │       │
│    PID│ Letters, digits and -.                                       │       │
│   4101│                                                              │       │
│   4188│ Enter apply   Esc cancel                                     │       │
│   4290╰──────────────────────────────────────────────────────────────╯       │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
