crates/ui/src/snapshots/cctop_ui__snapshot__handoff_picker_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲╭ Hand the context to ───────────────────────────────────────╮JECT    │
│●    now│   claude                  as default                       │ the ch…┃
│●     7m│   codex                   as default                       │        │
╰────────│   codex                   as spare                         │────────╯
╭ Info  P│   opencode                                                 │ Context╮
│Root /us│ in /home/me/src/web  (c to change)                         │        │
│    PID │ ↑/↓  Enter start  Esc cancel                               │        │
│   4101 ╰────────────────────────────────────────────────────────────╯        │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
